# CSC10003-Tencent-CrossyRoad

./: .gitignore  10cent-CrossyRoad.sln  Audio.cpp  Audio.h  CMakeLists.txt  Crossy Road.sln  Crossy Road.sln.lnk  Crossy Road.vcxproj  Crossy Road.vcxproj.filters  CrossyRoad.cpp  CrossyRoad.sln  Crossy_Road.sln  Drawable.cpp  Drawable.h  Entity.cpp  Entity.h  Event.cpp  Event.h  FileDialog.cpp  FileDialog.h  Font.cpp  Font.h  Frame.cpp  Frame.h  Game.cpp  Game.h  Hoang.CR  Item.cpp  Item.h  Lane.cpp  Lane.h  Map.cpp  Map.h  MenuScreen.cpp  MenuScreen.h  Movable.cpp  Movable.h  Pixel.cpp  Pixel.h  Player.cpp  (+32 more)
enc_temp_folder/6a7349f4d16d342babef107b8a92d84a/: CrossyRoad.cpp
sound/: street map game sound.AAC
x64/Debug/: Crossy Road.exe.recipe  Crossy Road.ilk  Crossy Road.vcxproj.FileListAbsolute.txt  Tencent-CrossyRoad.exe.recipe  Tencent-CrossyRoad.ilk  Tencent-CrossyRoad.vcxproj.FileListAbsolute.txt  vc143.idb
x64/Debug/Crossy Road.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Crossy Road.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Debug/Tencent-.D9A88879.tlog/: CL.command.1.tlog  CL.read.1.tlog  Tencent-CrossyRoad.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
